#65922, 65921 - updated view of select controls. Added * if required to label.

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/dropdown/case-dropdown-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/dropdown/case-dropdown-control.component.html
@@ -1,7 +1,4 @@
 <ng-container [formGroup]="form">
-  <mbsc-dropdown [name]="field.name" #control [formControlName]="field.name" [label]="field.label">
-    <option value=""></option>
-    <option *ngFor="let opt of dataSource; trackBy: trackByFn" [value]="opt.value" >{{opt.text}}</option>>
-  </mbsc-dropdown>
+  <mbsc-select #control [formControlName]="field.name" [options]="settings" [data]="dataSource">{{ getHeader }}{{ requiredSymbol }}</mbsc-select>
 </ng-container>
 <!-- <mbsc-input #control [(ngModel)]="text">{{ field.label }}</mbsc-input> -->
