--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/dropdown/case-multi-dropdown-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/dropdown/case-multi-dropdown-control.component.html
@@ -1,1 +1,1 @@
-<mbsc-textarea #control [(ngModel)]="text" >{{ field.label }}</mbsc-textarea> 
+<mbsc-textarea #control [(ngModel)]="text" >{{ field.label }}{{ requiredSymbol }}</mbsc-textarea> 
