--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/switch/case-switch-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/switch/case-switch-control.component.html
@@ -1,5 +1,5 @@
 <ng-container [formGroup]="form">
-    <mbsc-switch #control [formControlName]="field.name">{{ field.label }}
+    <mbsc-switch #control [formControlName]="field.name">{{ field.label }} {{ requiredSymbol }}
         <span class="mbsc-desc">{{ description }}</span>
     </mbsc-switch> 
 </ng-container>
