--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/case-files/case-files-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/case-files/case-files-control.component.html
@@ -1,8 +1,8 @@
 <div class="case-subsection">
 <span class="mbsc-label case-subsection-title">Files</span>
 <br>
-  <mbsc-listview [options]="fileListSettings">       
-      <mbsc-listview-item *ngFor="let item of getFilesModel(); trackBy: identify" 
+  <mbsc-listview [options]="fileListSettings">
+      <mbsc-listview-item *ngFor="let item of files; trackBy: identify" 
           icon="fa-paperclip"
           (click)="downloadFile(item)">{{ item.fileName }}</mbsc-listview-item>
   </mbsc-listview>
