--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_ExtendedCaseControlPanel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_ExtendedCaseControlPanel.cshtml
@@ -9,7 +9,10 @@
             {
                 <div class="input-group">
                     <select name="steps" class="dropdown-group pull-left">
-                        <option value="0" class="form-control">@Translation.Get(Text.SelectStep)</option>
+                        @if (Model.WorkflowSteps.Count > 1)
+                        {
+                            <option value="0" class="form-control">@Translation.Get(Text.SelectStep)</option>
+                        }
                         @if (Model.WorkflowSteps != null && Model.WorkflowSteps.Any())
                         {
                             foreach (var step in Model.WorkflowSteps)
