--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -173,9 +173,10 @@
     */
 </script>
 
-@if (Model.CaseId == 0 || (Model.WorkflowSteps != null && Model.WorkflowSteps.Any()))
+@if (Model.CurrentCustomer.ShowCaseActionsPanelOnTop && 
+    (Model.CaseId == 0 || Model.WorkflowSteps != null && Model.WorkflowSteps.Any()))
 {
-    @Html.Partial("_ExtendedCaseControlPanel", Model)
+    @Html.Partial("_ExtendedCaseControlPanel", Model.CreateExCaseControlsPanelModel(1))
 }
 
 @using (Html.BeginForm("ExtendedCase", "case", null, FormMethod.Post, new { id = "extendedCaseForm" }))
@@ -386,18 +387,18 @@
                         }
                         <table id="NewCasefiles_table" class="table table-striped" style="margin-top: 10px;">
                             <tbody>
-                                @if (Model.CaseId > 0 && Model.CaseDataModel.CaseFiles != null && Model.CaseDataModel.CaseFiles.Count > 0)
+                            @if (Model.CaseId > 0 && Model.CaseDataModel.CaseFiles != null && Model.CaseDataModel.CaseFiles.Count > 0)
+                            {
+                                foreach (var item in Model.CaseDataModel.CaseFiles)
                                 {
-                                    foreach (var item in Model.CaseDataModel.CaseFiles)
-                                    {
-                                        <tr>
-                                            <td>
-                                                <i class="glyphicon glyphicon-file">&nbsp;</i>
-                                                <a style="color: blue" href="@downloadCaseFileCompleteUrl.Replace("{name}", item.FileName).Replace("{id}", Model.CaseId.ToString())">@item.FileName</a>
-                                            </td>
-                                        </tr>
-                                    }
+                                    <tr>
+                                        <td>
+                                            <i class="glyphicon glyphicon-file">&nbsp;</i>
+                                            <a style="color: blue" href="@downloadCaseFileCompleteUrl.Replace("{name}", item.FileName).Replace("{id}", Model.CaseId.ToString())">@item.FileName</a>
+                                        </td>
+                                    </tr>
                                 }
+                            }
                             </tbody>
                         </table>
                     </div>
@@ -408,8 +409,8 @@
 
     @*/* only on new for now.. */*@
     @if (ViewBag.AttachmentPlacement == 1 &&
-                                 Model.CaseId == 0 &&
-                                 Model.CaseDataModel.FieldSettings.Select(f => f.Name).Contains(GlobalEnums.TranslationCaseFields.Filename.ToString()))
+         Model.CaseId == 0 &&
+         Model.CaseDataModel.FieldSettings.Select(f => f.Name).Contains(GlobalEnums.TranslationCaseFields.Filename.ToString()))
     {
         <div id="NewCase_upload_files_popup" role="dialog" class="modal fade" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
@@ -430,6 +431,12 @@
         @Html.Partial("ModalDialogs/_UploadFileFromClipboardPopup")
     }
 </div>
+
+@if (Model.CurrentCustomer.ShowCaseActionsPanelAtBottom && 
+     (Model.CaseId == 0 || Model.WorkflowSteps != null && Model.WorkflowSteps.Any()))
+{
+    @Html.Partial("_ExtendedCaseControlPanel", Model.CreateExCaseControlsPanelModel(2))
+}
 
 @section Scripts
 {
