--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_ExtendedCaseControlPanel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_ExtendedCaseControlPanel.cshtml
@@ -1,14 +1,19 @@
 ﻿@using DH.Helpdesk.Common.Constants
-@model DH.Helpdesk.SelfService.Models.Case.ExtendedCaseViewModel
+@model DH.Helpdesk.SelfService.Models.Case.ExtendedCaseControlsPanelModel
 
-<div class="jumbotron greybar">
+@{
+    var prefix = Model.Poisition > 1 ? Model.Poisition .ToString() : string.Empty;
+}
+<div class="jumbotron greybar" id="exCaseControlPanel@(prefix)">
     <div class="container-fluid">
         <div class="col-lg-12 secnav">
-            <input name="btnSave" type="button" value='@((Model.WorkflowSteps != null && Model.WorkflowSteps.Any()) ? Translation.Get("Save") : Translation.Get("Save and Send"))' class="btn btn-default pull-left" style="margin-right:20px !important;" />
+            <input name="btnSave@(prefix)" type="button" 
+                   value='@((Model.WorkflowSteps != null && Model.WorkflowSteps.Any()) ? Translation.Get("Save") : Translation.Get("Save and Send"))' 
+                   class="btn btn-default pull-left save-button" style="margin-right: 20px !important;"/>
             @if (Model.WorkflowSteps != null && Model.WorkflowSteps.Any())
             {
                 <div class="input-group">
-                    <select name="steps" class="dropdown-group pull-left">
+                    <select name="steps@(prefix)" class="dropdown-group pull-left workflows-select">
                         @if (Model.WorkflowSteps.Count > 1)
                         {
                             <option value="0" class="form-control">@Translation.Get(Text.SelectStep)</option>
@@ -22,7 +27,7 @@
                         }
                     </select>
                     <span class="input-group-btn pull-left">
-                        <input name="btnGo" type="button" class="btn btn-default go-button" value="@Translation.Get("Send")" />
+                        <input name="btnGo@(prefix)" type="button" class="btn btn-default go-button" value="@Translation.Get("Send")"/>
                     </span>
                 </div>
 
