--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_ExtendedCaseControlPanel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/_ExtendedCaseControlPanel.cshtml
@@ -4,7 +4,7 @@
 @{
     var prefix = Model.Poisition > 1 ? Model.Poisition .ToString() : string.Empty;
 }
-<div class="jumbotron greybar" id="exCaseControlPanel@(prefix)">
+@*<div class="jumbotron greybar" id="exCaseControlPanel@(prefix)">
     <div class="container-fluid">
         <div class="col-lg-12 secnav">
             <input name="btnSave@(prefix)" type="button" 
@@ -33,5 +33,39 @@
 
             }
         </div>
+    </div>
+</div>*@
+
+<div class="jumbotron greybar" id="exCaseControlPanel@(prefix)">
+    <div class="container-fluid">
+        <div class="row" style="margin-right: 0px !important;">
+            <div class="col-sm-1 pull-left">
+                <input name="btnSave@(prefix)" type="button"
+                       value='@((Model.WorkflowSteps != null && Model.WorkflowSteps.Any()) ? Translation.Get("Save") : Translation.Get("Save and Send"))'
+                       class="btn btn-default save-button" style="margin-right: 0px !important;"/>
+            </div>
+                @if (Model.WorkflowSteps != null && Model.WorkflowSteps.Any())
+            {
+                    <div class="col-sm-1 input-group">
+                        <select name="steps@(prefix)" class="dropdown-group workflows-select">
+                            @if (Model.WorkflowSteps.Count > 1)
+                            {
+                                <option value="0">@Translation.Get(Text.SelectStep)</option>
+                            }
+                            @if (Model.WorkflowSteps != null && Model.WorkflowSteps.Any())
+                            {
+                                foreach (var step in Model.WorkflowSteps)
+                                {
+                                    <option data-next-step="@step.NextStep" value="@step.CaseTemplateId">@Translation.Get(step.Name)</option>
+                                }
+                            }
+                        </select>
+                        <span class="input-group-btn">
+                            <input name="btnGo@(prefix)" type="button" class="btn btn-default go-button" value="@Translation.Get("Send")" />
+                        </span>
+                    </div>
+
+                }
+            </div>
     </div>
 </div>
