--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.scss
@@ -1,3 +1,5 @@
+
+
 .md-paging {
     .mbsc-scv, .mbsc-scv-sc, .mbsc-scv-item {
         width: 100%;
@@ -14,3 +16,10 @@ mbsc-tab-nav {
         }
     }
 }
+
+.case-content
+{
+  padding-top: 46px;
+  display: block;
+}
+
